fix text overflow and add some mobile gestures

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,8 @@ body.login main {
     justify-content: center;
 }
 
-body.chat {
+body.chat,
+body.chat main {
     overflow-x: hidden;
 }
 
@@ -97,6 +98,7 @@ body.chat {
     display: flex;
     width: 100%;
     justify-content: space-between;
+    align-items: center;
 }
 
 .posts {
@@ -122,6 +124,10 @@ body.chat {
     padding-bottom: 0px;
     display: flex;
     gap: 20px
+}
+
+.post:hover {
+    filter: brightness(120%);
 }
 
 .post-header {
@@ -161,6 +167,10 @@ body.chat {
     resize: none;
 }
 
+.default-avatar {
+    border-radius: 0px;
+}
+
 .edit-status {
     position: relative;
     opacity: 0.5;
@@ -172,6 +182,10 @@ img.preview,
     height: auto;
     max-width: 100%;
     max-height: 10rem;
+}
+
+.markdown-body p {
+    word-wrap: anywhere;
 }
 
 video.preview,
@@ -237,4 +251,8 @@ audio.preview {
 
 .edit-button:disabled {
     opacity: 0.5;
+}
+
+.emoji {
+    vertical-align: bottom;
 }
